<resources>
    <string name="app_name">Simple calculator</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="result">Division by zero!</string>
    <string name="problem">Input a number</string>
    <string name="gg">Delenie na nol</string>
    <string name="clear">Clear</string>
    <string name="of">Overflow!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear1">C</string>
</resources>
